Translate interface, Added new icon; Rename ini file

--- a/Mahou/Properties/Resources.resx
+++ b/Mahou/Properties/Resources.resx
@@ -118,130 +118,6 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="Mahou" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        AAABAAEAICAAAAAAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAIDQwACA0MAAgNDAAIDQwAr2wAUb98AB0IDQwACA0MAAgNDAAIDQwACA0MAAgNDAAIDQwACA0MAAgN
-        DAAIDQwACA0MAAgNDAAIDQwACA0MAAgNDAAIDQwACA0MAAgNDAAIDQwACA0MAL98AB2vbABRCA0MAAgN
-        DAAIDQwACA0MAAgNDAAIDQwACA0MAAgNDADRjQBj1JAAWwgNDAAIDQwACA0MAAgNDAAIDQwACA0MAAgN
-        DAAIDQwACA0MAAgNDAAIDQwACA0MAAgNDAAIDQwACA0MAAgNDAAIDQwACA0MAAgNDAAIDQwA1JAAW9GN
-        AGMIDQwACA0MAAgNDAAIDQwACA0MAAgNDAAIDQwAn1wAAteRAHzgmAB9pGEABAgNDAAIDQwACA0MAAgN
-        DAAIDQwACA0MAAgNDAAIDQwACA0MAAgNDAAIDQwACA0MAAgNDAAIDQwACA0MAAgNDAAIDQwACA0MAKRh
-        AATgmAB915EAfJ9cAAIIDQwACA0MAAgNDAAIDQwACA0MAAgNDACfXAAE25QAlfCnALrKhQBLCA0MAAgN
-        DAAIDQwACA0MAAgNDAAIDQwACA0MAAgNDAAIDQwACA0MAAgNDAAIDQwACA0MAAgNDAAIDQwACA0MAAgN
-        DAAIDQwAyoUAS/CnALrblACVn1wABAgNDAAIDQwACA0MAAgNDAAIDQwACA0MALt4ABDmngCr76YAzd6X
-        AI67dwATCA0MAAgNDAAIDQwACA0MAAgNDAAIDQwACA0MAAgNDAAIDQwACA0MAAgNDAAIDQwACA0MAAgN
-        DAAIDQwACA0MALt3ABPelwCO76YAzeaeAKu7eAAQCA0MAAgNDAAIDQwACA0MAAgNDAAIDQwAtXIAFOae
-        ALT1qwDJ6qEAx92XAHG5dQAPCA0MAAgNDAAIDQwACA0MAAgNDAAIDQwACA0MAAgNDAAIDQwACA0MAAgN
-        DAAIDQwACA0MAAgNDAC5dQAP3ZcAceqhAMf1qwDJ5p4AtLVyABQIDQwACA0MAAgNDAAIDQwACA0MAAgN
-        DACuawAU4JkAtPWrAMjpoQDJ66IAyuKaAJjLhgA3n1wAAggNDAAIDQwACA0MAAgNDAAIDQwACA0MAAgN
-        DAAIDQwACA0MAAgNDACfXAACy4YAN+KaAJjrogDK6aEAyfWrAMjgmQC0rmsAFAgNDAAIDQwACA0MAAgN
-        DAAIDQwACA0MALVyABTrogC086kAyPCmAMjzqQDI8acAy+KbAL7dlgBy4psAP8uGACusaAAICA0MAAgN
-        DAAIDQwACA0MAKxoAAjLhgAr4psAP92WAHLimwC+8acAy/OpAMjwpgDI86kAyOuiALS1cgAUCA0MAAgN
-        DAAIDQwACA0MAAgNDAAIDQwAtXIAFO2lALTupQDI9asAyPSrAMjvpgDJ9asAyfasAMjyqQDL9KoAwNqT
-        AH6oZQAHn1wAAp9cAAKoZQAH2pMAfvSqAMDyqQDL9qwAyPWrAMnvpgDJ9KsAyPWrAMjupQDI7aUAtLVy
-        ABQIDQwACA0MAAgNDAAIDQwACA0MAAgNDAC1cgAU8KcAtPGnAMj1qwDI8agAyO2kAMj2rADI76YAyOuj
-        ANTzqgDO3ZYAd8F7AB25dACOuXQAjsF7AB3dlgB386oAzuujANTvpgDI9qwAyO2kAMjxqADI9asAyPGn
-        AMjwpwC0tXIAFAgNDAAIDQwACA0MAAgNDAAIDQwACA0MALVyABTvpgC09qwAyPOpAMjupQDI9qwAyPWr
-        AMjwpwDI+K4AyPasAMPNhwBIunUAvLt2AP63cwD+uXQAvM2HAEj2rADD+K4AyPCnAMj1qwDI9qwAyO6l
-        AMjzqQDI9qwAyO+mALS1cgAUCA0MAAgNDAAIDQwACA0MAAgNDAAIDQwAt3QAE/KpALD8sQDI76YAyPas
-        AMjzqQDI8agAyPCnAMjupQDI76YAt7l1AFm9dwD5x4EA/8aAAP+9dwD5uXUAWe+mALfupQDI8KcAyPGo
-        AMjzqQDI9qwAyO+mAMj8sQDI8qkAsLd0ABMIDQwACA0MAAgNDAAIDQwACA0MAAgNDAC4dAAE6J8AgPyx
-        AMf4rgDI9KoAyPWrAMjyqADI9KoAyPCmAMjnnwDKvHgAp7hzAPu0cAD/tHAA/7hzAPu8eACn558AyvCm
-        AMj0qgDI8qgAyPWrAMj0qgDI+K4AyPyxAMfonwCAuHQABAgNDAAIDQwACA0MAAgNDAAIDQwACA0MAAgN
-        DADHggAb7KMAqfyxAMj3rQDI86kAyPiuAMjvpgDI9KoAyOaeAM67dgD4wnwA/8F8AP/BfAD/wnwA/7t2
-        APjmngDO9KoAyO+mAMj4rgDI86kAyPetAMj8sQDI7KMAqceCABsIDQwACA0MAAgNDAAIDQwACA0MAAgN
-        DAAIDQwACA0MAAgNDADEfwAx7KMAqfmvAMj6rwDI8acAyPasAMjtpADI6KAAzsN+APm0cAD/uXUA/7l1
-        AP+0cAD/w34A+eigAM7tpADI9qwAyPGnAMj6rwDI+a8AyOyjAKnEfwAxCA0MAAgNDAAIDQwACA0MAAgN
-        DAAIDQwACA0MAAgNDAAIDQwACA0MAAgNDADOiAAf558AhviuALr4rgDI7aQAyOObAMjelgDOvXgA+cB7
-        AP+5dAD/uXQA/8B7AP+9eAD53pYAzuObAMjtpADI+K4AyPiuALrnnwCGzogAHwgNDAAIDQwACA0MAAgN
-        DAAIDQwACA0MAAgNDAAIDQwACA0MAAgNDAAIDQwACA0MABAQDAC3cwAZ9KsAhvKpAMjpoQDI5p0AyOOb
-        AM7BfAD5tnEA/8F8AP/BfAD/tnEA/8F8APnjmwDO5p0AyOmhAMjyqQDI9KsAhrdzABkIDQwACA0MAAgN
-        DAAIDQwACA0MAAgNDAAIDQwACA0MAAgNDAAIDQwACA0MAAgNDACfXAACyIMAO+KaAKLwpwDG76YAyO6l
-        AMjqoQDI4ZkAzsiCAPfDfQD/wnwA/8J8AP/DfQD/yIIA9+GZAM7qoQDI7qUAyO+mAMjwpwDG4poAosiD
-        ADufXAACCA0MAAgNDAAIDQwACA0MAAgNDAAIDQwACA0MAAgNDAAIDQwAn1wAAsyHAFHtpAC88qgAyOui
-        AMjwpwDI66IAyPKoAMjxqADG3JUAsrl0APu7dwD/u3cA/7l0APvclQCy8agAxvKoAMjrogDI8KcAyOui
-        AMjyqADI7aQAvMyHAFGfXAACCA0MAAgNDAAIDQwACA0MAAgNDAAIDQwACA0MAJ9cAALMhwBR8KcAvfOp
-        AMjxqADI8KcAyPGoAMjyqADI76YAxvWrAGHOiAA9y4UA8M6HAP/OhwD/y4UA8M6IAD31qwBh76YAxvKo
-        AMjxqADI8KcAyPGoAMjzqQDI8KcAvcyHAFGfXAACCA0MAAgNDAAIDQwACA0MAAgNDACfXAACzIcAUfKp
-        AL32rADI8KcAyO6lAMj3rQDI8KYAyO6lAMj4rgC4/LEAHc6HAB/HgQDSx4EA+8eBAPvHgQDSzocAH/yx
-        AB34rgC47qUAyPCmAMj3rQDI7qUAyPCnAMj2rADI8qkAvcyHAFGfXAACCA0MAAgNDAAIDQwAn1wAAsyH
-        AFHvpgC9+q8AyO+mAMjyqADI9qwAyPCmAMj2rADI8agAyPyxAKT5rwAMCA0MAMR+AEzGgABtxoAAbcR+
-        AEwIDQwA+a8ADPyxAKTxqADI9qwAyPCmAMj2rADI8qgAyO+mAMj6rwDI76YAvcyHAFGfXAACCA0MAAgN
-        DADSjAAo8qkAuPuxAMjxpwDI960AyO+mAMj2rADI86oAyPCmAMj6rwDI+rAAd/OpAAIIDQwAxH4AUcF7
-        ACvBewArxH4AUQgNDADzqQAC+rAAd/qvAMjwpgDI86oAyPasAMjvpgDI960AyPGnAMj7sQDI8qkAuNKM
-        ACgIDQwAqmYAAuOcAHjxqADN8qgAyPmvAMjupQDI+K4AyO6lAMj2rADI9KoAyPyxAMH7sAAxCA0MAMB6
-        AATBewBkwHoAD8B6AA/BewBkwHoABAgNDAD7sAAx/LEAwfSqAMj2rADI7qUAyPiuAMjupQDI+a8AyPKo
-        AMjxqADN45wAeKpmAAL/tAAD8qgAg+6lAMr4rgDK86kAyPSqAMjzqQDI8qgAyO+mAMj8sQDI+7EAj/Sq
-        AAn/tAACw30ALcJ8ADoIDQwACA0MAMJ8ADrDfQAt/7QAAvSqAAn7sQCP/LEAyO+mAMjyqADI86kAyPSq
-        AMjzqQDI+K4Ayu6lAMryqACD/7QAAwgNDADvpQAb86kApOyjAMrzqgDL86kAyPGoAMjxqADI+7AAyPqw
-        AJf1qwAbyYMAHdeQADjGgABhw30AEwgNDAAIDQwAw30AE8aAAGHXkAA4yYMAHfWrABv6sACX+7AAyPGo
-        AMjxqADI86kAyPOqAMvsowDK86kApO+lABsIDQwACA0MAAgNDADwpgA88agAwemgAMvvpgDJ7KMAyfmv
-        AMX3rQCU9asAGy0hDADIgQBQxX4AVMN8ADIIDQwACA0MAAgNDAAIDQwAw3wAMsV+AFTIgQBQCA0MAPWr
-        ABv3rQCU+a8AxeyjAMnvpgDJ6aAAy/GoAMHwpgA8CA0MAAgNDAAIDQwA7qQADfSqADPtpAC06KAAy9qU
-        ANbvpgC09qwAVfCmAA8IDQwACA0MAMN9AAjHgQAUwHoAAggNDAAIDQwACA0MAAgNDADAegACx4EAFMN9
-        AAgIDQwACA0MAPCmAA/2rABV76YAtNqUANbooADL7aQAtPSqADPupAANCA0MAO6kAAHupAAW8acALe2j
-        AFjyqABk6KAATvOpABnupAABCA0MAAgNDAAIDQwACA0MAAgNDAAIDQwACA0MAAgNDAAIDQwACA0MAAgN
-        DAAIDQwACA0MAAgNDAAIDQwACA0MAO6kAAHzqQAZ6KAATvKoAGTtowBY8acALe6kABbupAABCA0MAAgN
-        DAAIDQwAEBAMACcdDAAIDQwACA0MAAgNDAAIDQwACA0MAAgNDAAIDQwACA0MAAgNDAAIDQwACA0MAAgN
-        DAAIDQwACA0MAAgNDAAIDQwACA0MAAgNDAAIDQwACA0MAAgNDAAIDQwACA0MAAgNDAAIDQwACA0MAAgN
-        DAAIDQwACA0MAAgNDAAIDQwACA0MAAgNDAAIDQwACA0MAAgNDAAIDQwACA0MAAgNDAAIDQwACA0MAAgN
-        DAAIDQwACA0MAAgNDAAIDQwACA0MAAgNDAAIDQwACA0MAAgNDAAIDQwACA0MAAgNDAAIDQwACA0MAAgN
-        DAAIDQwACA0MAAgNDAAIDQwACA0MAAgNDAAIDQwACA0MAAgNDAAIDQwACA0MAAgNDAAIDQwACA0MAAgN
-        DAAIDQwACA0MAAgNDAAIDQwACA0MAAgNDAAIDQwACA0MAAgNDAAIDQwACA0MAAgNDAAIDQwACA0MAAgN
-        DAAIDQwACA0MAAgNDAAIDQwA8///z/P//8/h//+H4f//h+D//wfgf/4H4B/4B+ADwAfgAAAH4AAAB+AA
-        AAfgAAAH4AAAB/AAAA/4AAAf/AAAP/4AAH/4AAAf8AAAD+AAAAfAAAADgAQgAYAEIAEACBAAAAGAAIAB
-        gAHAI8QDgGPGAQD//wD///////////////8=
-</value>
-  </data>
-  <data name="MahouSymbolIgnoreMode" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AABca/8APkj/Ci42/z8wN/8HWGf/APfy8gD38vIA9/LyAPfy8gD38vIA9/LyAFhn/wAwN/8HLjb/Pz5I
-        /wpca/8AND3/ACkw/xEcIf90ICb/Iw0P/wD7//MA9/LyAPfy8gD38vIA9/LyAPv/8wAND/8AICb/Ixwh
-        /3QpMP8RND3/ACoy/wAnLv8aFxv/pBgc/3cpMP8UJAD/AB4j/wBRYv8AUWL/AB4j/wAkAP8AKTD/FBgc
-        /3cXG/+kJy7/Gioy/wAtNf8AJy7/HRQY/6wQE//BFxv/ihke/z8fJP8cWGz/AVdr/wEfJP8cGR7/Pxcb
-        /4oQE//BFBj/rCcu/x0tNf8ALDT/ACEn/x0PEv+rDRD/yQ0Q/8gOEP/AFBf/hj5L/0I/TP9CFBf/hg4Q
-        /8ANEP/IDRD/yQ8S/6shJ/8dLDT/ACcu/wAdIv8bDA7/qAwO/8kLDf/IDRD/yCEn/6JDUf/RQ1H/0SEn
-        /6INEP/ICw3/yAwO/8kMDv+oHSL/Gycu/wAtNf8AICb/Cg8S/3gJC//ECgz/yQ4R/8gqM//RRFL/+URS
-        //kqM//RDhH/yAoM/8kJC//EDxL/eCAm/wotNf8A///zAAQA/wAfJP8cDhD/fAoM/74RFf/JLzj/5ERS
-        //9EUv//Lzj/5BEV/8kKDP++DhD/fB8k/xwEAP8A///zAPfy8gAqMv8AOkT/CBwg/1EQE/+0FRn/ySw0
-        /+BATf/+QE3//iw0/+AVGf/JEBP/tBwg/1E6RP8IKjL/APfy8gAoL/8AMjv/Chgc/1sRFP+2DxL/yBAT
-        /8EfJf+eOUX/7TlF/+0fJf+eEBP/wQ8S/8gRFP+2GBz/WzI7/wooL/8AMDj/CBYa/1sMD/+5DRD/yQ0Q
-        /8kLDf+oGh//NzpF/5g6Rf+YGh//NwsN/6gNEP/JDRD/yQwP/7kWGv9bMDj/CBYa/zIMD/+zCw3/yQwP
-        /8gLDf/IBgf/giEn/xY+Sv82Pkr/NiEn/xYGB/+CCw3/yAwP/8gLDf/JDA//sxYa/zIRE/8vDxL/sAwP
-        /8oLDf/JCQv/qQwP/0M4RP8pPEn/GDxJ/xg4RP8pDA//QwkL/6kLDf/JDA//yg8S/7ARE/8vDxP/DBIV
-        /3cVGP+9DxL/lgcJ/zowOv8XOkb/JjxJ/wQ8Sf8EOkb/JjA6/xcHCf86DxL/lhUY/70SFf93DxP/DBAU
-        /wcRFf8mFRn/NhIV/xYBBP8Bh8L/ADpH/wE6Rv8AOkb/ADpH/wGHwv8AAQT/ARIV/xYVGf82ERX/JhAU
-        /wcRFP8ADRD/ABke/wARFP8AFBr/AP/78wD7//MA9/LyAPfy8gD7//MA//vzABQa/wARFP8AGR7/AA0Q
-        /wARFP8Aj/EAAI/xAACH4QAAgAEAAIABAACAAQAAgAEAAMADAADAAwAAgAEAAAAAAAAAAAAAAAAAAAAA
-        AAAFoAAA//8AAA==
-</value>
-  </data>
-  <data name="MahouTrayHD" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        AAABAAEAEBAAAAAAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AACjZAAAwX4ACtGMAD/PiwAHp2cAAAgNDAAIDQwACA0MAAgNDAAIDQwACA0MAKdnAADPiwAH0YwAP8F+
-        AAqjZAAAy4YAANaQABHjmwB035gAI/KpAAAAAAwACA0MAAgNDAAIDQwACA0MAAAADADyqQAA35gAI+Ob
-        AHTWkAARy4YAANWPAADYkgAa6KAApOefAHfWkAAU/9gAAOGaAACuagAArmoAAOGaAAD/2AAA1pAAFOef
-        AHfooACk2JIAGtWPAADSjAAA2JIAHeuiAKzvpgDB6KAAiuaeAD/gmQAcp2IAAahjAAHgmQAc5p4AP+ig
-        AIrvpgDB66IArNiSAB3SjAAA040AAN6XAB3wpwCr8qgAyfKoAMjxqADA66MAhsF7AELAewBC66MAhvGo
-        AMDyqADI8qgAyfCnAKvelwAd040AANiSAADimwAb86oAqPOqAMn0qgDI8qgAyN6XAKK8dwDRvHcA0d6X
-        AKLyqADI9KoAyPOqAMnzqgCo4psAG9iSAADSjAAA35gACvCnAHj2rADE9asAyfGnAMjVjgDRu3YA+bt2
-        APnVjgDR8acAyPWrAMn2rADE8KcAeN+YAArSjAAAAAQMAP+4AADgmQAc8agAfPWrAL7upADJ0IoA5Lt2
-        AP+7dgD/0IoA5O6kAMn1qwC+8agAfOCZABz/uAAAAAQMAAgNDADVjwAAxYEACOOcAFHvpgC06qEAydON
-        AOC/egD+v3oA/tONAODqoQDJ76YAtOOcAFHFgQAI1Y8AAAgNDADXkQAAzYgACuefAFvupQC28KcAyO+m
-        AMHgmACexoAA7caAAO3gmACe76YAwfCnAMjupQC2558AW82IAArXkQAAz4oACOmhAFvzqQC58qgAyfKo
-        AMn0qgCo5Z0AN8WAAJjFgACY5Z0AN/SqAKjyqADJ8qgAyfOpALnpoQBbz4oACOmhADLzqQCz9KoAyfOp
-        AMj0qgDI+a8Agt6XABbBfAA2wXwANt6XABb5rwCC9KoAyPOpAMj0qgDJ86kAs+mhADLupgAv8KcAsPOp
-        AMr0qgDJ9qwAqfOpAEPHgQApw30AGMN9ABjHgQAp86kAQ/asAKn0qgDJ86kAyvCnALDupgAv8KYADO2k
-        AHfqogC98KcAlvitADrPiAAXxX8AJsN9AATDfQAExX8AJs+IABf4rQA68KcAluqiAL3tpAB38KYADO+l
-        AAfupAAm6qEANu2kABb+sAABeBoAAMV+AAHFfwAAxX8AAMV+AAF4GgAA/rAAAe2kABbqoQA27qQAJu+l
-        AAfupQAA8qgAAOaeAADupQAA66AAAAAIDAAAAAwACA0MAAgNDAAAAAwAAAgMAOugAADupQAA5p4AAPKo
-        AADupQAAj/EAAI/xAACH4QAAgAEAAIABAACAAQAAgAEAAMADAADAAwAAgAEAAAAAAAAAAAAAAAAAAAAA
-        AAAFoAAA//8AAA==
-</value>
-  </data>
   <data name="up" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAANjr9RwUqgAAACBjSFJNAACH
@@ -1070,5 +946,9 @@
         HesQEeYcP6cX5J+HWm2C3jTEAxe0EljXEMuHwJy7C+wAkzSoNoGpkXIMwkbA6L1Q816wUUWIiQtaNV8a
         fGYB2LMNsbgQ60Q82ASmpFaN8DK3cMBaF13bPK29xICRAAAAAElFTkSuQmCC
 </value>
+  </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="FaineSwitch" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\FaineSwitch.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
