Added new icon and saving dictionary in setup file

--- a/FaineSwitch/Properties/Resources.resx
+++ b/FaineSwitch/Properties/Resources.resx
@@ -951,4 +951,7 @@
   <data name="FaineSwitch" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\FaineSwitch.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="AS_dict" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\as_dict.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
 </root>
